fix back spacing on cards

--- a/Assets/css/glassCard.css
+++ b/Assets/css/glassCard.css
@@ -72,6 +72,7 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
+  height: 500px;
   margin-top: 150px;
   margin-bottom: 100px;
   padding: 20px;
